--- a/Ninja vs Samurai/Resources/Info.plist
+++ b/Ninja vs Samurai/Resources/Info.plist
@@ -28,6 +28,8 @@
 	<array>
 		<string>Shojumaru-Regular.ttf</string>
 	</array>
+	<key>UILaunchImageFile~iphone</key>
+	<string>Default-568h.png</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -43,6 +45,8 @@
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
